[package]
name = "AT42QT2120"
version = "0.1.0"
authors = ["Rik <rik@justanotherelectronicsblog.com>"]
repository = "https://github.com/riktw/AT42QT2120-rs"
license = "LGPL-3.0"
description = "Platform agnostic Rust driver for the AT42QT2120"
readme = "README.md"
keywords = ["AT42QT2120", "driver", "touch", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "0.2.1"
